--- a/views/previewResult.ejs
+++ b/views/previewResult.ejs
@@ -55,7 +55,7 @@
 
 <body>
   <main class=" h-screen pb-5" style="background-color: #6c6c7f24; ">
-    <%-include('header.ejs',{admin:null})%>
+    <%-include('header.ejs',{admin:admin})%>
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
         style=" margin: 30px auto; height: 75%; width: 75%;">
         <div class="mx-auto">
