--- a/views/displayVoters.ejs
+++ b/views/displayVoters.ejs
@@ -13,20 +13,7 @@
   <script>
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
-    function updateVoter(id, content) {
-      fetch(`/voters/${id}`, {
-        method: 'put',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          content,
-          _csrf: token
-        })
-      }).then((res) => {
-        if (res.ok) {
-          window.location.reload();
-        }
-      }).catch((err) => console.log(err))
-    }
+  
     function deleteVoter(id) {
       var result = confirm("Are you sure?")
       if (result) {
@@ -69,7 +56,7 @@
                 </div>
 
                 <div class="inline-block">
-                  <form method="post" action="/elections/<%=election.id%>/voters">
+                  <form method="post" action="/elections/<%=election.id%>/voters" onsubmit="submit_btn.disabled = true; return true;">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
 
                     <div class="flex items-center relative">
@@ -86,7 +73,7 @@
                           </button>
                         </div>
                     
-                      <button type="submit"
+                      <button type="submit" name="submit_btn"
                         class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 ">ADD</button>
 
                     </div>
