--- a/views/questionDetailsPage.ejs
+++ b/views/questionDetailsPage.ejs
@@ -54,8 +54,8 @@
         style=" margin: 30px auto; height: 75%; width: 75%;">
         <div class="mx-auto">
           <% var data=[ {label:"Home",url:"/elections",current:false},
-            {label:`${election.title}`,url:`/elections/${election.id}`,current:false}, {label:`Question
-            #${question.id}`,url:`/questions/${question.id}`,current:true}, ] %>
+            {label:`${election.title}`,url:`/elections/${election.id}`,current:false}, {label:`
+            ${question.title}`,url:`/questions/${question.id}`,current:true}, ] %>
             <%- include('navigation.ejs',{data:data})%>
               <div class="flex justify-between">
                 <h1 class="mt-3 text-2xl font-semibold text-gray-600 inlin-block">
