added disabled btn

--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -22,7 +22,7 @@
           <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
             <h1 class="text-gray-600 text-2xl font-semibold text-center">Forgot Password</h1>
-            <form method="post" action="/admins/forgotPassword">
+            <form method="post" action="/admins/forgotPassword" onsubmit="submit_btn.disabled = true; return true;">
               <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
               <div class="p-3">
                 <label for="email" class="text-gray-600 text-lg py-2">Enter your email</label>
@@ -31,7 +31,7 @@
               </div>
 
               <div class="p-3">
-                <button type="submit"
+                <button type="submit" name="submit_btn"
                   class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
               </div>
             </form>
