--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -21,9 +21,9 @@
       // let compelete = false
       //check how many questions r there
       if(questions.length < 1){
-        window.alert("An election must have atleast one answer")
+        window.alert("Unable to launch\nAn election must have atleast one question")
       }else if(launchError){
-        window.alert("less answer")
+        window.alert("Each question in an election must have atleast two answers")
       }
       else{
       //check how many answers each question has
