--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -23,7 +23,7 @@
           <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
             <h1 class="text-gray-600 text-2xl font-semibold text-center">Reset Password</h1>
-            <form method="post" action='<%=token%>'>
+            <form method="post" action='<%=token%>' onsubmit="submit_btn.disabled = true; return true;">
               <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
               <div class="p-3">
                 <label for="password" class="text-gray-600 text-lg py-2">Enter new password</label>
@@ -32,7 +32,7 @@
               </div>
 
               <div class="p-3">
-                <button type="submit"
+                <button type="submit" name="submit_btn"
                   class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
               </div>
             </form>
