--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -28,7 +28,7 @@
             <%- include('navigation.ejs',{data:data})%>
             <div class="p-8 mx-auto flex flex-col align-center justify-center container" style="width: 500px;">
               <h1 class="text-gray-600 text-2xl font-semibold text-center">Create new election</h1>
-              <form method="post" action="/elections/createElection">
+              <form method="post" action="/elections/createElection" onsubmit="submit_btn.disabled = true; return true;">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
                 <div class="p-3">
                   <label for="title" class="text-gray-900 text-lg py-2">What's your election's name?</label>
@@ -42,7 +42,7 @@
                     class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                 </div>
                 <div class="p-3">
-                  <button type="submit"
+                  <button type="submit" name="submit_btn"
                     class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SUBMIT</button>
                 </div>
               </form>
