--- a/views/createQuestions.ejs
+++ b/views/createQuestions.ejs
@@ -25,7 +25,7 @@
               <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
                 <h1 class="text-gray-600 text-2xl font-semibold text-center">Create new Question</h1>
-                <form method="post" action="/questions/createQuestion">
+                <form method="post" action="/questions/createQuestion" onsubmit="submit_btn.disabled = true; return true;">
                   <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
                   <input type="hidden" name="electionId" value="<%=election.id%>" />
                   <div class="p-3">
@@ -40,7 +40,7 @@
                       class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                   </div>
                   <div class="p-3">
-                    <button type="submit"
+                    <button type="submit" name="submit_btn"
                       class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SUBMIT</button>
                   </div>
                 </form>
