--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -46,22 +46,26 @@
           <%}%>
          
           <%if(election.status=="ended" ){%>
-            <p>The election has ended</p>
-            <div class="flex justify-between">
-                
-              <p class="text-gray-600 font-light">Select the dropdown to view the voting result for each question</p>
-                <select id="select1" name="selectedQuestion" onchange="displayChart()">
-                  <option value="" disabled selected>Select</option>
-                  <%for(var i=0;i< questions.length;i++){%>
-                    <a href="">
-                      <option value="<%=questions[i].id%>">Question <%=i+1%>
-                      </option>
-                    </a>
-                    <%}%>
-                </select>
-            </div>
-            <div id="container" style="height: 400px;"></div>
-          </div>          <%}%>
+              <p>The election has ended</p>
+              <div class="flex justify-between">
+                  
+                <p class="text-gray-600 font-light">Select the dropdown to view the voting result for each question</p>
+                  <select id="select1" name="selectedQuestion" onchange="displayChart()">
+                    <option value="" disabled selected>Select</option>
+                    <%for(var i=0;i< questions.length;i++){%>
+                      <a href="">
+                        <option value="<%=questions[i].id%>">Question <%=i+1%>
+                        </option>
+                      </a>
+                      <%}%>
+                  </select>
+              </div>
+              <div>
+                <p class="text-gray-500 text-xl"><span class="text-gray-600 font-semibold"><%=voterCount%></span> voters have voted so far</p>
+              </div>
+              <div id="container" style="height: 400px;"></div>
+              </div>          
+          <%}%>
           <%if(election.status=="launched" ){%>
             <%if(currentVoter != null){%>
             <%if(currentVoter.voterStatus == "voted"){%>
@@ -70,41 +74,40 @@
             
             <%if(currentVoter != null && currentVoter.voterStatus == "created"){%>
                 <% if(groupedByQuestion.length>0){%>
-                    <form action="/elections/<%=election.id%>/vote/analyze" method="post">
-                      <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
-                      <input type="hidden" name="electionId" value="<%=election.id%>" />
-
+                    <form id="voteForm" 
+                    action="/elections/<%=election.id%>/vote/analyze" method="post">
+                      <input type="hidden" name="_csrf" value="<%=csrfToken%>"id="_csrf" />
+                      <input type="hidden" name="electionId" value="<%=election.id%>" id="electionId" />
                       <%for(var i=0; i<groupedByQuestion.length;i++){%>
-                        <div class="py-3">
-                          <p class="text-2xl font-semibold"><span>
-                              <%=i+1%>, 
-                            </span>
-                            <%=groupedByQuestion[i].title%>
-                          </p>
-                        </div>
-                        <div >
-                          <p class="text-gray-600 text-xl font-light">
-                            <%=groupedByQuestion[i].description%>
-                          </p>
-                        </div>
-                        <div class="py-3 flex flex-col px-3">
-                          <%for(var l=0; l< groupedByQuestion[i].answers.length;l++) {%>
-                            <div>
-                                <input type="radio" name='<%=groupedByQuestion[i].id%>'
-                                value='<%=groupedByQuestion[i].answers[l]["id"]%>'>
-                              <label for='<%=groupedByQuestion[i].id%>'>
-                                <%=groupedByQuestion[i].answers[l]["content"]%>
-                              </label>
-                              <% }%>
-                                <%}%>
-                            </div>
-                          
-                        </div>
-
-                        <button type="submit" class="bg-green-600 py-2 px-3 text-white  mt-5" style="width: 300px;">VOTE</button>
+                          <fieldset>
+                              <legend class="text-2xl font-semibold"><span>
+                                    <%=i+1%>, 
+                                  </span>
+                                  <%=groupedByQuestion[i].title%>
+                              </legend>
+                    
+                              <p class="text-gray-600 text-lg font-light">
+                                  <%=groupedByQuestion[i].description%>
+                              </p>
+                            
+                              <div class="py-3 flex flex-col px-3">
+                                <%for(var l=0; l< groupedByQuestion[i].answers.length;l++) {%>
+                                    <div>
+                                        <input type="radio" name='<%=groupedByQuestion[i].id%>'
+                                        value='<%=groupedByQuestion[i].answers[l]["id"]%>'>
+                                      <label for='<%=groupedByQuestion[i].id%>'>
+                                        <%=groupedByQuestion[i].answers[l]["content"]%>
+                                      </label>
+                                    </div>
+                                  
+                                <% }%>
+                                </div>
+                            </fieldset>
+                       <%}%>
+                      <button type="submit" class="bg-green-600 py-2 px-3 text-white  mt-5" style="width: 300px;">VOTE</button>
                     </form>
                   <% }%>
-             <%}%>  
+                  <%}%>  
            <%}%>
         </div>
       </div>
@@ -116,7 +119,22 @@
      let parsedData = <%-JSON.stringify(parsedResult)%>
      let newData =[]
      let filtered=[]
+     let electionId = document.getElementById('electionId').value
     var queTitle ;
+    document.getElementById('voteForm').addEventListener('submit', (event) => {
+    const check =  [...document.getElementById('voteForm').querySelectorAll('fieldset')].every(fieldset => !!fieldset.querySelector('input:checked'));
+    
+    console.log(`${check ? 'A' : 'Not a'}ll questions have been answered!`);
+  // for demo purposes, prevent the submit regardless
+  
+    if(!check)  { event.preventDefault();
+   window.alert('Not all questions have answer')
+  }
+   
+      })
+    
+  
+
     function displayChart(){
       newData=[]
       //if the chart container has child remove all
