--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -36,9 +36,9 @@
                     class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                 </div>
                 <div class="p-3">
-                  <label for="customString" class="text-gray-900 text-lg py-2">What's the custom string for the
+                  <label for="url" class="text-gray-900 text-lg py-2">What's the custom string for the
                     election?</label>
-                  <input type="text" name="customString"
+                  <input type="text" name="url"
                     class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                 </div>
                 <div class="p-3">
