--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -37,9 +37,11 @@
                     <h1 class="text-3xl text-center text-red-600 font-bold mt-6">
                         <%=msg%>
                     </h1>
+                    <%if(msg == "Invalid credential. Please log in again!"){%>
                     <p class="py-2 text-xl">
                         <a href="/login" class="text-green-600 font-bold">Sign-In</a>
                       </p>
+                    <%}%>
                 </div>
             </div>
     </main>
