updated error page

--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -81,8 +81,7 @@
                     <% if(election.status=="launched" ){%>
                       <p class="text-xl text-gray-500 ">This election has launched and voters can access this URL</p>
                       <a href="/elections/e/<%=election.url%>/vote"
-                        class="text-blue-600 underline text-lg">https://online-election.onrender.com/elections/e/
-                        <%=election.url%>/vote</a>
+                        class="text-blue-600 underline text-lg">https://online-election.onrender.com/elections/e/<%=election.url%>/vote</a>
                       <%}%>
                         <% if(election.status=="ended" ){%>
                           <p class="text-xl text-gray-500 ">This election has ended</p>
