--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -42,6 +42,11 @@
                         <a href="/login" class="text-green-600 font-bold">Sign-In</a>
                       </p>
                     <%}%>
+                    <%if(msg =="Your token has expired! Please log in again."){%>
+                        <p class="py-2 text-xl">
+                            <a href="/login" class="text-green-600 font-bold">Sign-In</a>
+                          </p>
+                        <%}%>
                 </div>
             </div>
     </main>
