--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,26 +26,26 @@
                 <div class="mx-auto flex  flex-col	">
                     <h6 class="py-3 text-center text-green-600 text-2xl">Sign-Up as a new user</h6>
                     <form action="/admins/register" method="post">
-                        <input required type="hidden" name="_csrf" value="<%=csrfToken%>" />
+                        <input  type="hidden" name="_csrf" value="<%=csrfToken%>" />
                         <div class="py-3">
                             <label for="firstName">First Name</label>
-                            <input required type="text" name="firstName"
+                            <input  type="text" name="firstName"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                         </div>
                         <div class="py-3">
                             <label for="lastName">Last Name</label>
-                            <input required type="text" name="lastName"
+                            <input  type="text" name="lastName"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                         </div>
                         <div class="py-3">
                             <label for="email">Email</label>
-                            <input required type="email" name="email"
+                            <input  type="email" name="email"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" />
                         </div>
                         <div class="py-3">
                             <label for="password">Password</label>
                             <div class="flex items-center relative">
-                            <input required type="password" name="password"
+                            <input  type="password" name="password"
                                 class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2" id="password" />
                             <button type="button" class="absolute ml-2  right-2" onclick="viewPassword()">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
