--- a/views/voterLogin.ejs
+++ b/views/voterLogin.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <main class="h-screen " style="background-color: #6c6c7f24; ">
-        <%- include('header.ejs',{admin:null})%>
+        <%- include('voterHeader.ejs')%>
             <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md"
                 style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
                 <div class="mx-auto flex  flex-col	mt-5 ">
