--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -34,7 +34,7 @@
 
 <body>
   <main class=" h-screen" style="background-color: #6c6c7f24; ">
-    <%-include('header.ejs',{admin:null})%>
+    <%-include('voterHeader.ejs')%>
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
         style=" margin: 30px auto; height: 75%; width: 65%;">
         <div class="mx-auto p-6">
