--- a/views/displayVoters.ejs
+++ b/views/displayVoters.ejs
@@ -31,6 +31,10 @@
       }
     }
   </script>
+  <style>
+  body{
+  background-color: #6c6c7f24;}
+  </style>
 </head>
 
 <body>
@@ -38,7 +42,7 @@
     <%-include('header.ejs',{admin:admin})%>
 
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
-        style=" margin: 30px auto; height: 75%; width: 75%;">
+        style=" margin: 30px auto; height: max-content; width: 75%;">
         <div class="mx-auto">
           <% var data=[ {label:"Home",url:"/elections",current:false},
             {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
