--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -42,13 +42,17 @@
         }
       }
   </script>
+  <stye>
+  body{
+  background-color: #6c6c7f24;}
+  </style>
 </head>
 
 <body>
   <main class=" h-screen pb-5" style="background-color: #6c6c7f24; ">
     <%-include('header.ejs',{admin:admin})%>
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
-        style=" margin: 30px auto; height: 75%; width: 75%;">
+        style=" margin: 30px auto; height: max-content; width: 75%;">
         <div class="mx-auto">
           <% var data=[ {label:"Home",url:"/elections",current:false},
             {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
