--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -107,14 +107,14 @@
                         </td>
                         <td class="p-4 w-1/4">
                           <div class="flex justify-between">
-                            <a href="/elections/<%=elections[i].id%>/edit">
+                            <a href="/elections/<%=elections[i].id%>/edit" id="edit-icon">
                               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-5 h-6 stroke-green-600">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                               </svg></a>
 
-                            <a href='' onclick="deleteElection('<%=elections[i].id%>')">
+                            <a href='' onclick="deleteElection('<%=elections[i].id%>')" id="delete-icon">
                               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-5 h-6 stroke-red-600">
                                 <path stroke-linecap="round" stroke-linejoin="round"
